--- a/app/templates/aurelia/TypeScript/ClientApp/app/components/navmenu/navmenu.html
+++ b/app/templates/aurelia/TypeScript/ClientApp/app/components/navmenu/navmenu.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">ECS 2.7182818284</a>
+                <a class="navbar-brand" href="/">Aurelia + TS</a>
             </div>
             <div class="clearfix"></div>
             <div class="navbar-collapse collapse">
